[package]
name = "transfer_token"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "2.0.1"
spl-token = { version = "6.0.0", features = ["no-entrypoint"] }
tokio = "1.38.0"
signature = "2.3.0-pre.3"

[dev-dependencies]
solana-program-test = "2.0.1"
solana-sdk = "2.0.1"

[lib]
crate-type = ["cdylib", "lib"]